# usv_sim

./: CMakeLists.txt  README.md  package.xml
DOCS/: .~lock.frames.odp#  frames.odp
MATLAB/: MobilePlot.m  MobileRobot.m  animate_map_plot.m  animate_map_plot_v2.m  control_position.m  control_position_plot.m  control_position_realtime_plot.m  last_simulation (copy).mat  path_planning.m  plot_control_position.m  torque_identification.mat
MATLAB/Extended_Model_Position_Control/: controller.m  init_robot_plot.m  main.m
MATLAB/Path_Tracking_controller/: controller.m  main.asv  main.m
launch/: boat.launch  control.launch  control_position.launch  default.rviz  hector_usv_sandisland.launch  iaquabot.rviz  identification_sandisland.launch  manual_sandisland.launch  manula.launch  mil.launch  multi_joy.launch  ocean.launch  px4_config.yaml  real_model.launch  rviz.launch  sandisland.launch
scripts/: Graf.py  camera_view.py  cmd_update.py  control_actions.py  data_save.py  drawline.py  ext_model_control.py  identification_signal.py  joy_control.py  joy_control_hector.py  key2thrust.py  polar_position_control.py  sample_pub.py  set_desired_point.py  setpoint_gazebo_delete.py  setpoint_gazebo_print.py  signal_callback.py  speed.py  torque_experiments.py  twist2thrust.py  update_pose.py  update_position.py  update_vel.py  update_vel_joy.py  usv_model.py  world2body copy.py  world2body.py
urdf/: macros.xacro  wamv_gazebo.urdf.xacro  wamv_gazebo.xacro
worlds/: example_course.world.xacro  example_world.world.xacro  ocean.world.xacro  sandisland.xacro  wind_test.world.xacro
(+170 files in other folders)
